Put z-index of menu high to fix bug

--- a/src/components/menu/menu.scss
+++ b/src/components/menu/menu.scss
@@ -7,7 +7,7 @@
     position: fixed;
     top: 70px;
     right: 0;
-    z-index: 2;
+    z-index: 10;
     display: flex;
     flex-direction: column;
     align-items: center;
