--- a/src/components/topbar/topbar.scss
+++ b/src/components/topbar/topbar.scss
@@ -25,7 +25,7 @@
             .logo{
                font-size: 40px;
                font-weight: 300;
-
+                overflow: hidden;
                text-decoration: none;
                color: inherit;
                margin-right: 10px;
@@ -42,16 +42,19 @@
                 align-items: center;
                 margin-left: 30px;
                 transition: all $transitionSpeed ease;
+                overflow: visible;
+
 
                 @include mobile{
                     display: none;
                 }
                 
                 &:focus, &:hover{
-                    transform: scale(1.15);
+                    transform: scale(1.10);
+
+                    
                 }
                 .icon{
-                    overflow: visible;
                     font-size: 18px;
                     margin-right: 5px;
                 }
